# ADLM-2025-Data-Challenge

./: .env.example  .gitignore  Dockerfile  FAISS.py  LICENSE.md  Makefile  README.md  add_new_documents.py  app_answer_local.py  ask.py  build_index.py  chat_app.py  chunk.py  example_queries_responses.json  incremental_ingest.py  index.py  ocr_all_pdfs_mp.py  polyglot.code-workspace  pull_request_template.md  pyproject.toml  q.py  query_suggestions.json  requirements.txt  start.sh  start_kg_app.sh  test_queries.sh  vectordb_summary.py
BCM_Clinical_Informatics/: FDA_file_map.xlsx  PathFinder.md  Path_FinderFDADocuments.md  README.md
Deepdoc/: requirements.txt
OHSUpath/: CHANGELOG.md  LICENSE  Makefile  README.md  app.py  config.py  config.yaml  rag_engine.py  requirements.txt  run_windows.ps1  startup_windows.ps1
PathFinderFDADocuments_1_0_0_2/: customizations.xml  solution.xml
Python_Code/: README.md
RAGer/: .gitignore  README.md  pyproject.toml
Running_RAGged/: README.md
adlm-2025-prems/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  start.sh
adlm-2025-prems/chat_api_dj/: .gitignore  README.md  manage.py  pyproject.toml
adlm-2025-prems/chat_api_dj/api/: admin.py  llm.py  models.py  search_indexes.py  tasks.py  views.py
adlm-2025-prems/chat_api_dj/api/management/commands/: analyze_markdown_diffs.py  build_chunks.py  build_database.py  convert_tables_to_kv.py  export_spacy_jsonl.py  get_doc_categories.py  link_review_to_letter.py  load_mineru_content.py  load_nougat_markdown.py  ner_extraction.py  ner_labeling.py  personalized_page_rank.py  populate_embeddings.py  populate_entity.py  populate_label.py  populate_marker_page_idx.py  relationship_extraction.py  scheduler.py  spacy_ner_extraction.py  triplet_extraction.py  vision_model_on_tables.py
adlm-2025-prems/chat_api_dj/api/migrations/: 0001_initial.py  0002_alter_chunk_block_type.py  0002_document_markdown_chunks_openai.py  0003_remove_chunk_entities_parse_failed_at_and_more.py  0003_remove_document_markdown_chunks_openai.py  0004_delete_labels.py  0004_document_markdown_chunks_openai.py  0005_5_enable_pgvector.py  0005_chunk_bbox.py  0006_chunk_embedding_alter_chunk_document.py  0007_chunk_embedding_model.py  0011_chunk_entities_parse_failed_at_and_more.py  0012_chunk_is_active_chunk_parent_chunk_and_more.py  0013_document_mineru_json_content_and_more.py  0014_chunk_page_idx.py  0015_chunk_image_document_category_and_more.py
adlm-2025-prems/chat_api_dj/api/templates/api/: base.html  document.html  document_list.html  marker_chunks.html  pdf_page.html
adlm-2025-prems/chat_api_dj/api/templates/search/indexes/api/: chunk_text.txt  document_text.txt
adlm-2025-prems/chat_api_dj/chat_web_dj/: asgi.py  settings.py  settings_production.py  urls.py  wsgi.py
adlm-2025-prems/chat_api_dj/graph/: admin.py  models.py
adlm-2025-prems/chat_api_dj/graph/migrations/: 0001_initial.py  0002_entity_extraction_model_and_more.py  0002_remove_entity_label_remove_node_entity_and_more.py  0003_remove_nodechunk_chunk_index.py  0003_rename_entity_node.py  0004_relationship_weight.py  0004_rename_left_entity_relationship_left_node_and_more.py  0005_alter_node_name_alter_relationship_relationship.py  0005_alter_relationship_left_node_and_more.py  0006_alter_node_name.py  0006_node_label.py  0007_entity_node_entity.py  0008_label_alter_node_entity_entity_label.py  0009_alter_entity_name.py
app/backend/: pyproject.toml
app/backend/app/scripts/: serve.py
app/backend/src/app/: api.py
app/backend/src/scripts/: cli.py
docs/: EXTRACTION_GUIDE.md  HOWTO.md  QUICK_START.md  UNIFIED_GRAPH_GUIDE.md  query_suggestions.json
experiments/2025-08-29.docling/: README.md  pyproject.toml
experiments/2025-08-29.docling/src/: __init__.py
experiments/2025-08-29.docling/src/common/: logging.py  settings.py
experiments/2025-08-29.docling/src/interaction/cli/: cli.py
experiments/2025-08-29.docling/src/presentation/cli/: cli.py
frontend/: .gitignore  (+5 more)
indigo/: .gitignore  README.md  design.md  pyproject.toml  setup.sh  teardown.sh
indigo/app/: build.py  main.py
indigo/app/lib/database/: build_database.py
indigo/app/lib/search/: tf_idf.py
indigo/app/lib/text_extraction/: text_extraction.py
indigo/app/lib/util/: download_data.py  read_text_documents.py
indigo/app/local_orchestration/: docker-compose.yml
indigo/app/src/database/: build_database.py  chunk_annotation.py  chunker.py  etl.py  extract_labdocs.py
indigo/app/src/search/: search.py
indigo/app/src/util/: __init__.py  aws.py  configurations.py  download_data.py  file_reader_registry.py  read_documents.py  s3.py
indigo/backend/: .dockerignore  .gitattributes  Dockerfile  README.md  contextual_annotations_analysis.ipynb  design.md  docling.ipynb  embedding_atlas_prep.ipynb  get_embeddings_batched.py  pyproject.toml  test_request_objects.py  test_response_objects.py  time_test.py
indigo/backend/app/: app.py  build.py
indigo/backend/app/config/: chunk_annotation_patterns.yml
indigo/backend/app/local_orchestration/docker/localstack/cache/: machine.json
indigo/backend/app/src/api/: api_methods.py  api_objects.py
indigo/backend/app/src/chat/: chat.py  chat_clients.py  chat_templates.py  nova_client.py
indigo/backend/app/src/database/: build_database.py  chunker.py  etl.py
indigo/backend/app/src/search/: bm25.py  search.py  vector_search.py
indigo/backend/app/src/util/: aws.py  bedrock.py  configurations.py  download_data.py  file_reader_registry.py  open_ai_api.py  read_documents.py  s3.py
indigo/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
indigo/frontend/src/: App.css  App.jsx  index.css
indigo/frontend/src/components/: ChatInput.jsx  ChatMessages.jsx  ChatWindow.jsx  DocumentsPanel.jsx  Header.jsx  MatchesModal.jsx  PDFViewer.jsx  README.md  SettingsMenu.jsx  index.js
indigo/frontend/src/config/: api.js
indigo/frontend/src/hooks/: README.md  index.js  useApiStatus.js  useBackendConnection.js  useChat.js
indigo/local_orchestration/: README.md  docker-compose.yml
(+33004 files in other folders)
