[project]
name = "chat-api-dj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-ninja>=1.4.3",
    "ollama>=0.5.3",
    "tqdm>=4.67.1",
    "datasets>=4.0.0",
    "markdown>=3.7.0",
    "langchain-text-splitters>=0.3.11",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "matplotlib>=3.8.0",
    "django-haystack[elasticsearch]>=3.3.0",
    "whoosh>=2.7.4",
    "marker-pdf[full]>=1.9.2",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "pgvector>=0.2.0",
    "huggingface_hub>=0.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
