[project]
name = "ADLM-2025-Data-Challenge-CWAM"
version = "0.1.0"
description = "Team CWAM's data challenge project for ADLM 2025"
requires-python = ">=3.13"
dependencies = ["fastapi", "gunicorn", "uvicorn", "pydantic", "fire"]

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/scripts"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
start-api = "scripts.cli:start_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".venv"]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"
